--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,6 +3,11 @@ main = "src/index.ts"
 compatibility_date = "2024-09-23"
 compatibility_flags = ["nodejs_compat"]
 
+[observability.logs]
+enabled = true
+head_sampling_rate = 1
+invocation_logs = true
+
 # Queues
 [[queues.producers]]
 queue = "metadata-fetch-queue"
@@ -22,6 +27,27 @@ queue = "orderbook-snapshot-queue"
 max_batch_size = 50
 max_batch_timeout = 10
 
+# Gap backfill queue for recovery
+[[queues.producers]]
+queue = "gap-backfill-queue"
+binding = "GAP_BACKFILL_QUEUE"
+
+[[queues.consumers]]
+queue = "gap-backfill-queue"
+max_batch_size = 5
+max_batch_timeout = 30
+max_retries = 3
+
+# Trade tick queue for execution-level data (backtesting)
+[[queues.producers]]
+queue = "trade-tick-queue"
+binding = "TRADE_QUEUE"
+
+[[queues.consumers]]
+queue = "trade-tick-queue"
+max_batch_size = 100
+max_batch_timeout = 5
+
 # Durable Objects
 [durable_objects]
 bindings = [
@@ -32,15 +58,24 @@ bindings = [
 tag = "v1"
 new_classes = ["OrderbookManager"]
 
-# KV Namespace
+# KV Namespaces
 [[kv_namespaces]]
 binding = "MARKET_CACHE"
 id = "9377c262330f4d80b9fb6841d6b8cf19"
+
+# Hash chain cache for gap detection (create with: wrangler kv:namespace create HASH_CHAIN_CACHE)
+[[kv_namespaces]]
+binding = "HASH_CHAIN_CACHE"
+id = "2d5f178dcab04f4697eb6f6a9a0946a5"
 
 # R2 Bucket (create with: wrangler r2 bucket create polymarket-orderbooks)
 [[r2_buckets]]
 binding = "ORDERBOOK_STORAGE"
 bucket_name = "polymarket-orderbooks"
+
+# Cron trigger for daily R2 archival (runs at 2 AM UTC)
+[triggers]
+crons = ["0 2 * * *"]
 
 # Environment variables
 [vars]
