--- a/wrangler.toml
+++ b/wrangler.toml
@@ -13,17 +13,8 @@ invocation_logs = true
 # ============================================================
 
 [[queues.producers]]
-queue = "metadata-fetch-queue"
-binding = "METADATA_QUEUE"
-
-[[queues.producers]]
 queue = "orderbook-snapshot-queue"
 binding = "SNAPSHOT_QUEUE"
-
-[[queues.consumers]]
-queue = "metadata-fetch-queue"
-max_batch_size = 50
-max_batch_timeout = 10
 
 [[queues.consumers]]
 queue = "orderbook-snapshot-queue"
@@ -53,38 +44,27 @@ max_batch_size = 100
 max_batch_timeout = 30
 max_retries = 2
 
-# Aggregated snapshot queue (from SnapshotAggregator DO)
+# Level change queue for order placements/cancellations
 [[queues.producers]]
-queue = "aggregated-snapshot-queue"
-binding = "AGGREGATED_SNAPSHOT_QUEUE"
+queue = "level-change-queue"
+binding = "LEVEL_CHANGE_QUEUE"
 
 [[queues.consumers]]
-queue = "aggregated-snapshot-queue"
+queue = "level-change-queue"
 max_batch_size = 100
-max_batch_timeout = 60
+max_batch_timeout = 30
 max_retries = 2
 
-# Realtime tick queue (for triggers with 24h TTL)
+# Full L2 snapshot queue (periodic every 5 min)
 [[queues.producers]]
-queue = "realtime-tick-queue"
-binding = "REALTIME_TICK_QUEUE"
+queue = "full-l2-queue"
+binding = "FULL_L2_QUEUE"
 
 [[queues.consumers]]
-queue = "realtime-tick-queue"
-max_batch_size = 100
-max_batch_timeout = 10
-max_retries = 2
-
-# Archival queue for R2 cold storage
-[[queues.producers]]
-queue = "archival-queue"
-binding = "ARCHIVAL_QUEUE"
-
-[[queues.consumers]]
-queue = "archival-queue"
-max_batch_size = 1
+queue = "full-l2-queue"
+max_batch_size = 50
 max_batch_timeout = 60
-max_retries = 3
+max_retries = 2
 
 # ============================================================
 # DURABLE OBJECTS
@@ -92,8 +72,7 @@ max_retries = 3
 
 [durable_objects]
 bindings = [
-  { name = "ORDERBOOK_MANAGER", class_name = "OrderbookManager" },
-  { name = "SNAPSHOT_AGGREGATOR", class_name = "SnapshotAggregator" }
+  { name = "ORDERBOOK_MANAGER", class_name = "OrderbookManager" }
 ]
 
 [[migrations]]
@@ -103,6 +82,10 @@ new_classes = ["OrderbookManager"]
 [[migrations]]
 tag = "v2"
 new_classes = ["SnapshotAggregator"]
+
+[[migrations]]
+tag = "v3"
+deleted_classes = ["SnapshotAggregator"]
 
 # ============================================================
 # KV NAMESPACES
@@ -117,20 +100,12 @@ binding = "HASH_CHAIN_CACHE"
 id = "2d5f178dcab04f4697eb6f6a9a0946a5"
 
 # ============================================================
-# R2 STORAGE - Cold storage for historical data
-# Create with: wrangler r2 bucket create polymarket-archive
-# ============================================================
-
-[[r2_buckets]]
-binding = "ARCHIVE_BUCKET"
-bucket_name = "polymarket-archive"
-
-# ============================================================
-# SCHEDULED TRIGGERS - Daily archival at 3 AM UTC
+# SCHEDULED TRIGGERS
+# - Market lifecycle check every 5 minutes (resolutions & new markets)
 # ============================================================
 
 [triggers]
-crons = ["0 3 * * *"]
+crons = ["*/5 * * * *"]
 
 # ============================================================
 # ENVIRONMENT VARIABLES
@@ -140,8 +115,6 @@ crons = ["0 3 * * *"]
 GAMMA_API_URL = "https://gamma-api.polymarket.com"
 CLOB_WSS_URL = "wss://ws-subscriptions-clob.polymarket.com/ws/market"
 SNAPSHOT_INTERVAL_MS = "60000"
-ARCHIVE_RETENTION_DAYS = "180"
-AGGREGATE_SNAPSHOTS = "true"
 
 # Secrets (set with: wrangler secret put SECRET_NAME)
 # CLICKHOUSE_URL - Full URL to ClickHouse HTTP interface
