fix deploy issues

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -10,6 +10,7 @@ invocation_logs = true
 
 # ============================================================
 # QUEUES - Optimized batch settings with reliability improvements
+# Cloudflare limits: max_batch_size=1-100, max_batch_timeout=0-60s
 # ============================================================
 
 # Dead Letter Queue for failed messages (reliability improvement)
@@ -19,8 +20,8 @@ binding = "DEAD_LETTER_QUEUE"
 
 [[queues.consumers]]
 queue = "dead-letter-queue"
-max_batch_size = 100      # Increased from 50 for better batching
-max_batch_timeout = 120   # Increased from 60s - debug data not latency-sensitive
+max_batch_size = 100      # Max allowed by Cloudflare
+max_batch_timeout = 60    # Max allowed by Cloudflare
 max_retries = 0  # DLQ messages are stored, not retried
 
 [[queues.producers]]
@@ -29,8 +30,8 @@ binding = "SNAPSHOT_QUEUE"
 
 [[queues.consumers]]
 queue = "orderbook-snapshot-queue"
-max_batch_size = 200      # Increased from 100 for better batching
-max_batch_timeout = 60    # Increased from 30s to accumulate larger batches
+max_batch_size = 100      # Max allowed by Cloudflare
+max_batch_timeout = 60    # Max allowed by Cloudflare
 max_retries = 5
 dead_letter_queue = "dead-letter-queue"
 
@@ -41,8 +42,8 @@ binding = "GAP_BACKFILL_QUEUE"
 
 [[queues.consumers]]
 queue = "gap-backfill-queue"
-max_batch_size = 10       # Keep at 10 - needs quick recovery
-max_batch_timeout = 60
+max_batch_size = 10       # Keep small for quick recovery
+max_batch_timeout = 60    # Max allowed by Cloudflare
 max_retries = 5
 dead_letter_queue = "dead-letter-queue"
 
@@ -53,8 +54,8 @@ binding = "TRADE_QUEUE"
 
 [[queues.consumers]]
 queue = "trade-tick-queue"
-max_batch_size = 200      # Increased from 100 for better batching
-max_batch_timeout = 60    # Increased from 30s - low volume, can wait
+max_batch_size = 100      # Max allowed by Cloudflare
+max_batch_timeout = 60    # Max allowed by Cloudflare
 max_retries = 5
 dead_letter_queue = "dead-letter-queue"
 
@@ -65,8 +66,8 @@ binding = "LEVEL_CHANGE_QUEUE"
 
 [[queues.consumers]]
 queue = "level-change-queue"
-max_batch_size = 250      # Increased from 100 - highest volume queue
-max_batch_timeout = 60    # Increased from 30s to accumulate larger batches
+max_batch_size = 100      # Max allowed by Cloudflare
+max_batch_timeout = 60    # Max allowed by Cloudflare
 max_retries = 5
 dead_letter_queue = "dead-letter-queue"
 
@@ -77,8 +78,8 @@ binding = "FULL_L2_QUEUE"
 
 [[queues.consumers]]
 queue = "full-l2-queue"
-max_batch_size = 100      # Increased from 50 for better batching
-max_batch_timeout = 120   # Increased from 60s - large payloads benefit from more batching
+max_batch_size = 100      # Max allowed by Cloudflare
+max_batch_timeout = 60    # Max allowed by Cloudflare
 max_retries = 5
 dead_letter_queue = "dead-letter-queue"
 
