--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,9 @@ node_modules/
 # Environment files (contain secrets)
 .env
 .env.*
+.dev.vars
 !.env.example
+!.dev.vars.example
 
 # Build output
 dist/
