--- a/app/.env.example
+++ b/app/.env.example
@@ -4,3 +4,13 @@
 # API key for authenticated SSE connection to trigger events
 # Must match VITE_DASHBOARD_API_KEY in the worker's .dev.vars (or Cloudflare secret)
 VITE_DASHBOARD_API_KEY=your-dashboard-api-key-here
+
+# ===== OPTIONAL: Override API base URL =====
+# By default:
+#   - Development (pnpm dev): http://localhost:8787 (local worker)
+#   - Production (pnpm build): https://api.indication.xyz (production worker)
+#
+# Both workers fetch LIVE data from Polymarket WebSocket.
+# Only override this if you need custom routing (e.g., staging environment).
+#
+# VITE_API_BASE=http://localhost:8787
