--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "test": "vitest"
   },
   "dependencies": {
-    "hono": "^4.0.0"
+    "@hono/zod-openapi": "^1.2.0",
+    "@hono/zod-validator": "^0.7.6",
+    "@scalar/hono-api-reference": "^0.9.39",
+    "hono": "^4.0.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240909.0",
